--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,19 +15,27 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+* {
+  transition: 0.1s;
+}
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
+  /* background: linear-gradient(
       to bottom,
       transparent,
       rgb(var(--background-end-rgb))
     )
-    rgb(var(--background-start-rgb));
+    rgb(var(--background-start-rgb)); */
 }
 
 @layer utilities {
   .text-balance {
     text-wrap: balance;
+  }
+}
+@layer base {
+  body {
+    @apply dark:bg-gray-800 bg-white;
   }
 }
