--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,3 +45,29 @@ body {
 .hover-drop-shadow:hover {
   filter: drop-shadow(0px 0px 24px rgb(148 163 184 / var(--tw-text-opacity)));
 }
+.typewriter {
+  text-transform: none !important;
+  overflow: hidden;
+  border-right: 0.15em solid orange;
+  white-space: nowrap;
+  margin: 0; /* Remove auto margin to align left */
+  letter-spacing: 0.15em;
+  animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
+}
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
+@keyframes blink-caret {
+  from,
+  to {
+    border-color: transparent;
+  }
+  50% {
+    border-color: orange;
+  }
+}
